# MIRV-Robot

./: .gitignore  README.md  ROSModuleFlowchart.drawio  agx_setup.md  collect_imports.py  dmesg.out  documentation.md  findCan.sh  fixCAN.sh  helpful_functions_lib.py  installation.md  mirv.db  nemo_envs.sh  remote_control.md  requirements.txt  ros_commands.md  service-start.sh  set_envs.sh  start.sh
mirv/: CMakeLists.txt  package.xml
mirv_control/: CMakeLists.txt  package.xml  setup.py  socketClient.py
mirv_control/Cloud/: .CloudConnection.py.swp  CloudAlServer.py  CloudConnection.py  CloudMock.py  MockCloud.py  README.md  roverClient.py  test.py
mirv_control/Controllers/: PID.py  fakeClient.py  intake_controller.py  intake_test.py  joystickdrive.py  joystickdrive_controller.py  remotedrive_master.py  robot_controller.py  tablet_controller.py  testPID.py  testPIDController.py
mirv_control/Database/: ActionClient.py  DatabaseController.py  tablemanager.py
mirv_control/Diagnostic/: GPSLogger.py  SimpleTwist.py
mirv_control/JoystickDrive/: JoystickDrive.py
mirv_control/Masters/: remotedrive_master.py
mirv_control/MessageConversion/: controllerFormatting.py
mirv_control/Odometry/: EKF.py  filter.py  odometryCalculator.py  odometrystate.py  record.py
mirv_control/PiLitControl/: PiLitController.py  mockLaneLines.py  placement.py
mirv_control/PurePersuit/: purpersuit.py  simClass.py
mirv_control/PurePursuit/: purePursuit.py
mirv_control/RoverHeading/: headingBasedOnCoordinate.py
mirv_control/RoverMaster/: FaultState.py  PiLitController.py  README.md  RoverController.py  RoverInterface.py  RoverMacros.py  RoverState.py  TestServer.py  placement.py
mirv_control/RoverPosition/: headingBasedOnCordinates.py  headingBasedOncoordinate.py
mirv_control/Status/: StatusManager.py  roverstate.py
mirv_control/TeleOp/: TeleopDrive.py
mirv_control/action/: Controller.action  Database.action  DetectLanes.action  DriveDistance.action  Garage.action  GeneratePlacementLocations.action  IMUCalibration.action  MovementToPiLit.action  NavSatToTruck.action  PickupPilit.action  PointTurn.action  PurePursuit.action  README.md  general.action
mirv_control/controlLoops/: PID.py
mirv_control/coordinateConversion/: HeadingFilter.py  (+1 more)
mirv_description/: CMakeLists.txt  README.md  package.xml  setup.py
mirv_real/: CMakeLists.txt  package.xml
mirv_real/drive/: .drive.cpp.swp  CMakeLists.txt  drive.cpp
mirv_simulation/: CMakeLists.txt  README.md  package.xml
mirv_simulation/launch/: mirv_sim_road.launch  pure_pursuit_test.launch  road_slight_curve.launch  shapes.launch  simulated_mirv.launch  spawn_mirv.launch  teleop_joy.launch
mirv_simulation/mockdata/: mockCameraPublisher.py  mockRobotStatus.py
mirv_simulation/src/: constants.py  gazebo_joint_state_pub.py  helpful_functions_lib.py  wheel_encoder_tick_pub.py
mirv_simulation/test/: gazebo_joint_state_example.yaml  test_gazebo_joint_state.launch  test_gazebo_joint_state.py
mirv_simulation/world/: double_lane_change.world  road_slight_curve.world
utilities/: network_setup.sh  prioritise_eth1.sh  utilities.md
(+25111 files in other folders)
