<?xml version="1.0"?>
<package format="2">
  <name>mirv_simulation</name>
  <version>0.0.0</version>
  <description>
    Simulation for a ros robot on a road
  </description>
  <author email="alexanderfrye51@gmail.com">Alex Frye</author>
  <maintainer email="alexanderfrye51@gmail.com">Alex Frye</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>mirv_description</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}/media" gazebo_model_path="${prefix}/media"/>
  </export>
</package>
